--- a/src/main/java/com/bmxApp/properties/bmxlife.properties
+++ b/src/main/java/com/bmxApp/properties/bmxlife.properties
@@ -1,12 +1,12 @@
-bmxlife.name=bmxlife
-bmxlife.url=https://bmxlife.pl/czesci
-bmxlife.description=div.tab
-bmxlife.safetyURL=https://bmxlife.pl/ochrona
-bmxlife.div=div#products-container
-bmxlife.productNameElement=h2.title
-bmxlife.productPriceElement=span.price
-bmxlife.productURLElement=a
-bmxlife.imageURLElement=div#products-container > ul#products.clearfix > li > a > img
-bmxlife.imageAttribute=src
-bmxlife.urlSearch=div#producers-container > ul#products.producers.main-category.clearfix > li > a[href]
-bmxlife.numberOfPages=
+name=bmxlife
+url=https://bmxlife.pl/czesci
+description=div.tab
+safetyURL=https://bmxlife.pl/ochrona
+div=div#products-container
+productNameElement=h2.title
+productPriceElement=span.price
+productURLElement=a
+imageURLElement=div#products-container > ul#products.clearfix > li > a > img
+imageAttribute=src
+urlSearch=div#producers-container > ul#products.producers.main-category.clearfix > li > a[href]
+numberOfPages=
