Successfully adding products from bmxlife with hardcoded information to the database

--- a/src/main/java/com/bmxApp/properties/bmxlife.properties
+++ b/src/main/java/com/bmxApp/properties/bmxlife.properties
@@ -5,8 +5,10 @@ safetyURL=https://bmxlife.pl/ochrona
 div=div#products-container
 productNameElement=h2.title
 productPriceElement=span.price
+productDiscountPriceElement=span.red
 productURLElement=a
-imageURLElement=div#products-container > ul#products.clearfix > li > a > img
+urlAtrribute=href
+imageURLElement=img
 imageAttribute=src
 urlSearch=div#producers-container > ul#products.producers.main-category.clearfix > li > a[href]
 numberOfPages=
