--- a/src/main/java/com/bmxApp/properties/avebmx.properties
+++ b/src/main/java/com/bmxApp/properties/avebmx.properties
@@ -5,11 +5,10 @@ safetyURL=https://www.avebmx.pl/ochrona
 div=div.row
 productNameElement=div.product-name
 productPriceElement=div.product-prices
-productDiscountPriceElement=span.red
-productURLElement=div.col-lg-3.col-md-6.col-6 > a
-urlAtrribute=div.product-image > img[class=first]
+productDiscountPriceElement=div.product-prices > div.product-price.price-promo
+productURLElement=a.product
+urlAtrribute=href
 imageURLElement=div.product-image > img[class=first]
 imageAttribute=src
 urlSearch = div.container > nav#header-main-menu.main-menu > ul#product-menu > li.has-children > ul.dropdown.wide6 > div.row > div.col-md-2 > li > a[href]
-numberOfPages=
-pageSearchElementMain = div.pagination > a.page
+numberOfPages=div.pagination > a.page
