Add manyfestbmx shop

--- a/src/main/java/com/bmxApp/properties/bmxlife.properties
+++ b/src/main/java/com/bmxApp/properties/bmxlife.properties
@@ -12,3 +12,4 @@ imageURLElement=img
 imageAttribute=src
 urlSearch=div#producers-container > ul#products.producers.main-category.clearfix > li > a[href]
 numberOfPages=
+allProductsDisplay=true
