--- a/src/main/java/com/bmxApp/properties/avebmx.properties
+++ b/src/main/java/com/bmxApp/properties/avebmx.properties
@@ -12,3 +12,4 @@ imageURLElement=div.product-image > img[class=first]
 imageAttribute=src
 urlSearch = div.container > nav#header-main-menu.main-menu > ul#product-menu > li.has-children > ul.dropdown.wide6 > div.row > div.col-md-2 > li > a[href]
 numberOfPages=div.pagination > a.page
+allProductsDisplay=false
