--- a/src/main/java/com/bmxApp/properties/manyfestbmx.properties
+++ b/src/main/java/com/bmxApp/properties/manyfestbmx.properties
@@ -1,14 +1,14 @@
 name=manyfestbmx
-url=https://www.manyfestbmx.pl
+url=https://manyfestbmx.pl
 description=div.rte-content
-safetyURL=https://www.manyfest.pl
-div=div.row
-productNameElement=div.product-name
-productPriceElement=div.product-prices
+safetyURL=https://manyfestbmx.pl/
+div=div.product-description
+productNameElement=h2.h3.product-title 
+productPriceElement=span.product-price
 productDiscountPriceElement=span.red
-productURLElement=div.col-lg-3.col-md-6.col-6 > a
-urlAtrribute=div.product-image > img[class=first]
-imageURLElement=div.product-image > img[class=first]
+productURLElement=h2.h3.product-title > a
+urlAtrribute=href
+imageURLElement=a.thumbnail.product-thumbnail
 imageAttribute=src
-urlSearch = span.cbp-tab-title
+urlSearch=div#producers-container > ul#products.producers.main-category.clearfix > li > a[href]
 numberOfPages=
