Fix ShopResearcher to look for all products - frames in manyfest in progress

--- a/src/main/java/com/bmxApp/properties/manyfestbmx.properties
+++ b/src/main/java/com/bmxApp/properties/manyfestbmx.properties
@@ -1,1 +1,26 @@
-
+url=https://www.manyfestbmx.pl
+description=div.rte-content
+safetyURL=https://www.manyfest.pl
+div=div.row
+productNameElement=div.product-name
+productPriceElement=div.product-prices
+div=div.product-description
+productNameElement=h2.h3.product-title
+productPriceElement=span.product-price
+productDiscountPriceElement=span.red
+productURLElement=div.col-lg-3.col-md-6.col-6 > a
+urlAtrribute=div.product-image > img[class=first]
+imageURLElement=div.product-image > img[class=first]
+imageAttribute=src
+urlSearch = div#iqitmegamenu-horizontal.iqitmegamenu.clearfix > nav > ul
+! nav#cbp-hrmenu.cbp-hrmenu.cbp-horizontal.cbp-hrsub-narrow > ul
+!span.cbp-tab-title
+numberOfPages=
+productURLElement=h2.h3.product-title > a
+urlAtrribute=href
+imageURLElement= a.thumbnail.product-thumbnail > img[data-full-size-image-url]
+imageAttribute=data-src
+urlSearch = div.cbp-category-link-w > a
+numberOfPages= div.products-sort-nb-dropdown.products-nb-per-page.dropdown > div.dropdown-menu > a.select-list.dropdown-item.js-search-link
+aaa = ul.page-list.clearfix.text-center > li > a
+allProductsDisplay=true
