--- a/src/main/java/com/bmxApp/properties/manyfestbmx.properties
+++ b/src/main/java/com/bmxApp/properties/manyfestbmx.properties
@@ -12,7 +12,8 @@ productURLElement=div.col-lg-3.col-md-6.col-6 > a
 urlAtrribute=div.product-image > img[class=first]
 imageURLElement=div.product-image > img[class=first]
 imageAttribute=src
-urlSearch = div#iqitmegamenu-horizontal.iqitmegamenu.clearfix > nav > ul
+!urlSearch = div.container.container-iqitmegamenu
+!div#iqitmegamenu-horizontal.iqitmegamenu.clearfix > nav > ul
 ! nav#cbp-hrmenu.cbp-hrmenu.cbp-horizontal.cbp-hrsub-narrow > ul
 !span.cbp-tab-title
 numberOfPages=
@@ -21,6 +22,7 @@ urlAtrribute=href
 imageURLElement= a.thumbnail.product-thumbnail > img[data-full-size-image-url]
 imageAttribute=data-src
 urlSearch = div.cbp-category-link-w > a
+urlSearchFrames = li#cbp-hrmenu-tab-4.cbp-hrmenu-tab.cbp-hrmenu-tab-4 > a
 numberOfPages= div.products-sort-nb-dropdown.products-nb-per-page.dropdown > div.dropdown-menu > a.select-list.dropdown-item.js-search-link
 aaa = ul.page-list.clearfix.text-center > li > a
 allProductsDisplay=true
