Add mapper, update model classes, add PropertyManager class

--- a/src/main/java/com/bmxApp/properties/avebmx.properties
+++ b/src/main/java/com/bmxApp/properties/avebmx.properties
@@ -1,15 +1,15 @@
-name=avebmx
+shopName=avebmx
 url=https://www.avebmx.pl/czesci
 description=div.tab-content.active > p
 safetyURL=https://www.avebmx.pl/ochrona
 div=div.row
-productNameElement=div.product-name
-productPriceElement=div.product-prices
-productDiscountPriceElement=div.product-prices > div.product-price.price-promo
-productURLElement=a.product
+productName=div.product-name
+productPrice=div.product-prices
+productDiscountPrice=div.product-prices > div.product-price.price-promo
+productURL=a.product
 urlAtrribute=href
-imageURLElement=div.product-image > img[class=first]
+imageURL=div.product-image > img[class=first]
 imageAttribute=src
-urlSearch = div.container > nav#header-main-menu.main-menu > ul#product-menu > li.has-children > ul.dropdown.wide6 > div.row > div.col-md-2 > li > a[href]
-numberOfPages=div.pagination > a.page
+urlSearchPage = div.container > nav#header-main-menu.main-menu > ul#product-menu > li.has-children > ul.dropdown.wide6 > div.row > div.col-md-2 > li > a[href]
+pagesNumber=div.pagination > a.page
 allProductsDisplay=false
