--- a/src/main/java/com/bmxApp/properties/bmxlife.properties
+++ b/src/main/java/com/bmxApp/properties/bmxlife.properties
@@ -1,15 +1,15 @@
-name=bmxlife
+shopName=bmxlife
 url=https://bmxlife.pl/czesci
 description=div.tab
 safetyURL=https://bmxlife.pl/ochrona
 div=div#products-container
-productNameElement=h2.title
-productPriceElement=span.price
-productDiscountPriceElement=span.red
-productURLElement=a
+productName=h2.title
+productPrice=span.price
+productDiscountPrice=span.red
+productURL=a
 urlAtrribute=href
-imageURLElement=img
+imageURL=img
 imageAttribute=src
-urlSearch=div#producers-container > ul#products.producers.main-category.clearfix > li > a[href]
-numberOfPages=
+urlSearchPage=div#producers-container > ul#products.producers.main-category.clearfix > li > a[href]
+pagesNumber=
 allProductsDisplay=true
