--- a/src/main/java/com/bmxApp/properties/manyfestbmx.properties
+++ b/src/main/java/com/bmxApp/properties/manyfestbmx.properties
@@ -1,16 +1,17 @@
+shopName = manyfestbmx
 url=https://www.manyfestbmx.pl
 description=div.rte-content
 safetyURL=https://www.manyfest.pl
 div=div.row
-productNameElement=div.product-name
-productPriceElement=div.product-prices
+productName=div.product-name
+productPrice=div.product-prices
 div=div.product-description
 productNameElement=h2.h3.product-title
 productPriceElement=span.product-price
-productDiscountPriceElement=span.red
-productURLElement=div.col-lg-3.col-md-6.col-6 > a
+productDiscountPrice=span.red
+productURL=div.col-lg-3.col-md-6.col-6 > a
 urlAtrribute=div.product-image > img[class=first]
-imageURLElement=div.product-image > img[class=first]
+imageURL=div.product-image > img[class=first]
 imageAttribute=src
 !urlSearch = div.container.container-iqitmegamenu
 !div#iqitmegamenu-horizontal.iqitmegamenu.clearfix > nav > ul
@@ -21,8 +22,8 @@ productURLElement=h2.h3.product-title > a
 urlAtrribute=href
 imageURLElement= a.thumbnail.product-thumbnail > img[data-full-size-image-url]
 imageAttribute=data-src
-urlSearch = div.cbp-category-link-w > a
+urlSearchPage = div.cbp-category-link-w > a
 urlSearchFrames = li#cbp-hrmenu-tab-4.cbp-hrmenu-tab.cbp-hrmenu-tab-4 > a
-numberOfPages= div.products-sort-nb-dropdown.products-nb-per-page.dropdown > div.dropdown-menu > a.select-list.dropdown-item.js-search-link
+pagesNumber= div.products-sort-nb-dropdown.products-nb-per-page.dropdown > div.dropdown-menu > a.select-list.dropdown-item.js-search-link
 aaa = ul.page-list.clearfix.text-center > li > a
 allProductsDisplay=true
