--- a/src/main/java/com/bmxApp/properties/avebmx.properties
+++ b/src/main/java/com/bmxApp/properties/avebmx.properties
@@ -13,3 +13,23 @@ imageAttribute=src
 urlSearchPage = div.container > nav#header-main-menu.main-menu > ul#product-menu > li.has-children > ul.dropdown.wide6 > div.row > div.col-md-2 > li > a[href]
 pagesNumber=div.pagination > a.page
 allProductsDisplay=false
+
+grips = gripy
+bars = kierownice
+barends = barendy
+stems = wsporniki
+heads = stery
+frames = ramy
+forks = widelce
+rims = obrecze
+tires = opony
+spokes = szprychy
+hubs = piasty
+posts = sztyce
+gears = zebatki
+cranks = korby
+pedals = pedaly
+chains = lancuchy
+seats = siodelka
+supports = suporty
+pegs = pegi
