--- a/src/main/java/com/bmxApp/properties/bmxlife.properties
+++ b/src/main/java/com/bmxApp/properties/bmxlife.properties
@@ -13,3 +13,23 @@ imageAttribute=src
 urlSearchPage=div#producers-container > ul#products.producers.main-category.clearfix > li > a[href]
 pagesNumber=
 allProductsDisplay=true
+
+grips = gripy
+bars = kierownice
+barends = barendy
+stems = wsporniki
+heads = stery
+frames = ramy
+forks = widelce
+rims = obrecze
+tires = opony
+spokes = szprychy
+hubs = piasty
+posts = sztyce
+gears = zebatki
+cranks = korby
+pedals = pedaly
+chains = lancuchy
+seats = siodelka
+supports = suporty
+pegs = pegi
