--- a/src/main/java/com/bmxApp/properties/manyfestbmx.properties
+++ b/src/main/java/com/bmxApp/properties/manyfestbmx.properties
@@ -27,3 +27,23 @@ urlSearchFrames = li#cbp-hrmenu-tab-4.cbp-hrmenu-tab.cbp-hrmenu-tab-4 > a
 pagesNumber= div.products-sort-nb-dropdown.products-nb-per-page.dropdown > div.dropdown-menu > a.select-list.dropdown-item.js-search-link
 aaa = ul.page-list.clearfix.text-center > li > a
 allProductsDisplay=true
+
+grips = gripy
+bars = kierownice
+barends = barendy
+stems = mosty
+heads = stery
+frames = ramy
+forks = widelce
+rims = obrecze
+tires = opony
+spokes = szprychy
+hubs = piasty
+posts = sztyce
+gears = zebatki
+cranks = korby
+pedals = pedaly
+chains = lancuchy
+seats = siodelka
+supports = suporty
+pegs = pegi
