Refactor PropertyManager and fix ShopResearcher

--- a/src/main/java/com/bmxApp/properties/manyfestbmx.properties
+++ b/src/main/java/com/bmxApp/properties/manyfestbmx.properties
@@ -2,30 +2,16 @@ shopName = manyfestbmx
 url=https://www.manyfestbmx.pl
 description=div.rte-content
 safetyURL=https://www.manyfest.pl
-div=div.row
-productName=div.product-name
-productPrice=div.product-prices
+productName=h2.h3.product-title
+productPrice=span.product-price
 div=div.product-description
-productNameElement=h2.h3.product-title
-productPriceElement=span.product-price
 productDiscountPrice=span.red
-productURL=div.col-lg-3.col-md-6.col-6 > a
-urlAtrribute=div.product-image > img[class=first]
-imageURL=div.product-image > img[class=first]
-imageAttribute=src
-!urlSearch = div.container.container-iqitmegamenu
-!div#iqitmegamenu-horizontal.iqitmegamenu.clearfix > nav > ul
-! nav#cbp-hrmenu.cbp-hrmenu.cbp-horizontal.cbp-hrsub-narrow > ul
-!span.cbp-tab-title
-numberOfPages=
-productURLElement=h2.h3.product-title > a
+productURL=h2.h3.product-title > a
 urlAtrribute=href
-imageURLElement= a.thumbnail.product-thumbnail > img[data-full-size-image-url]
+imageURL=a.thumbnail.product-thumbnail > img[data-full-size-image-url]
 imageAttribute=data-src
 urlSearchPage = div.cbp-category-link-w > a
-urlSearchFrames = li#cbp-hrmenu-tab-4.cbp-hrmenu-tab.cbp-hrmenu-tab-4 > a
 pagesNumber= div.products-sort-nb-dropdown.products-nb-per-page.dropdown > div.dropdown-menu > a.select-list.dropdown-item.js-search-link
-aaa = ul.page-list.clearfix.text-center > li > a
 allProductsDisplay=true
 
 grips = gripy
