--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
 server.port=8080
+server.error.include-binding-errors=always
 
 spring.messages.basename=lang/res
