Fix searching for manyfestbmx

--- a/src/main/java/com/bmxApp/properties/manyfestbmx.properties
+++ b/src/main/java/com/bmxApp/properties/manyfestbmx.properties
@@ -11,6 +11,7 @@ urlAtrribute=href
 imageURL=a.thumbnail.product-thumbnail > img[data-full-size-image-url]
 imageAttribute=data-src
 urlSearchPage = div.cbp-category-link-w > a
+urlSearchFrames = li#cbp-hrmenu-tab-4.cbp-hrmenu-tab.cbp-hrmenu-tab-4 > a
 pagesNumber= div.products-sort-nb-dropdown.products-nb-per-page.dropdown > div.dropdown-menu > a.select-list.dropdown-item.js-search-link
 allProductsDisplay=true
 
