--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ server.port=8080
 server.error.include-binding-errors=always
 
 spring.messages.basename=lang/res
+
+spring.mvc.hiddenmethod.filter.enabled=true
