--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,41 @@
 			<version>4.4.14</version>
 		</dependency>
 
+      <dependency> 
+         <groupId>org.apache.pdfbox</groupId> 
+         <artifactId>pdfbox</artifactId> 
+         <version>2.0.1</version> 
+      </dependency>   
+   
+      <dependency> 
+         <groupId>org.apache.pdfbox</groupId> 
+         <artifactId>fontbox</artifactId> 
+         <version>2.0.0</version> 
+      </dependency>
+      
+      <dependency>  
+         <groupId>org.apache.pdfbox</groupId> 
+         <artifactId>jempbox</artifactId> 
+         <version>1.8.11</version> 
+      </dependency> 
+        
+      <dependency>
+         <groupId>org.apache.pdfbox</groupId> 
+         <artifactId>xmpbox</artifactId> 
+         <version>2.0.0</version> 
+      </dependency> 
+     
+      <dependency> 
+         <groupId>org.apache.pdfbox</groupId> 
+         <artifactId>preflight</artifactId> 
+         <version>2.0.0</version> 
+      </dependency> 
+     
+      <dependency> 
+         <groupId>org.apache.pdfbox</groupId> 
+         <artifactId>pdfbox-tools</artifactId> 
+         <version>2.0.0</version> 
+      </dependency>
 	</dependencies>
 
 	<build>
